# showcase-cross-selling

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  Brewfile  CLAUDE.md  README.md  Taskfile.gcloud_wip_setup.yml  Taskfile.gcloud_workload_identiy_pool_setup.yml  Taskfile.yml  Tiltfile  compose.yml  docker-compose.yml  pyproject.toml  tempo-config.yaml
.github/: renovate.json
.github/actions/docker-build/: action.yaml
.github/workflows/: build-and-check.yml  build-and-publish.yml  build.yml  check.yml  claude-ci-failure-auto-fix.yml  push.yml  test-e2e.yml  tilt-integration-test.yml
adk-agents/: CLAUDE.md  Dockerfile  README.md
adk-agents/communications_agent/: SLACK.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
adk-agents/cross_selling_agent/: Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
adk-agents/insurance_host_agent/: __main__.py  agent.py  agent_executor.py
agents/: Dockerfile
agents/base/: README.md  pyproject.toml
agents/base/src/base/: __init__.py  agent_communication_dashboard_callbacks.py  agent_communication_dashboard_plugin.py  agent_executor.py  fastapi_health_endpoint.py  fastapi_utils.py  instrument_starlette_application.py  log_filters.py  observability_dashboard_callbacks.py  observability_dashboard_plugin.py
agents/base/src/base/a2a/: agent_executor.py
agents/base/src/base/openai_api/: chat_completion_service.py  models.py  openai_api.py
agents/base/tests/: test_openai_api.py
agents/communications_agent/: README.md  pyproject.toml
agents/communications_agent/agent/: __main__.py  agent.py
agents/communications_agent/src/communications_agent/: __main__.py  agent.py
agents/communications_agent/src/communications_agent/a2a/: a2a.py  card.py
agents/cross_selling_agent/: README.md  main.py  pyproject.toml
agents/cross_selling_agent/src/: __init__.py  agent.py
agents/cross_selling_agent/src/cross_selling_agent/: __main__.py  agent.py
agents/cross_selling_agent/src/cross_selling_agent/a2a/: a2a.py  card.py
agents/insurance_host_agent/: Dockerfile  README.md  agent.py  pyproject.toml
agents/insurance_host_agent/src/insurance_host_agent/: __init__.py  __main__.py  agent.py  remote_agent_connection.py
agents/insurance_host_agent/src/insurance_host_agent/a2a/: a2a.py  card.py
agents/insurance_host_agent/src/insurance_host_agent/api/: api.py
agents/service_expert/: README.md  pyproject.toml
agents/service_expert/src/service_expert/: __main__.py  agent.py
agents/service_expert/src/service_expert/a2a/: a2a.py  card.py
agents/stats_analysis_agent/: pyproject.toml
agents/stats_analysis_agent/src/stats_analysis_agent/: __init__.py  __main__.py  agent.py
agents/stats_analysis_agent/src/stats_analysis_agent/a2a/: card.py
agents/stats_analysis_agent/src/stats_analysis_agent/api/: api.py
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  communications-agent.yaml  cross-selling-agent.yaml  cross-selling-experiment.yaml  cross-selling-ragas-evaluation-trigger.yaml  cross-selling-ragas-evaluation.yaml  cross-selling-workforce.yaml  customer-crm.yaml  datasets.yaml  experiments.yaml  frontend-deployment.yaml  frontend-service.yaml  insurance-host-agent.yaml  insurance-host-experiment.yaml  insurance-host-ragas-evaluation-trigger.yaml  insurance-host-ragas-evaluation.yaml  insurance-products.yaml  metrics.yaml  namespace.yaml
deploy/base/: communications-agent.yaml  cross-selling-agent.yaml  cross-selling-workforce.yaml  customer-crm.yaml  insurance-host-agent.yaml  insurance-products.yaml  kustomization.yaml  namespace.yaml
deploy/base/agent-communications-dashboard-backend/: deployment.yaml  service.yaml
deploy/base/communication-agent/: agent.yaml  deployment.yaml  service.yaml
deploy/base/communications-agent/: agent.yaml
deploy/base/cross-selling-agent/: agent.yaml  deployment.yaml  service.yaml
deploy/base/customer-crm/: deployment.yaml  service.yaml
deploy/base/evaluations/: cross-selling-ragas-evaluation-trigger.yaml  cross-selling-ragas-evaluation.yaml  datasets.yaml  insurance-host-ragas-evaluation-metrics.yaml  insurance-host-ragas-evaluation-trigger.yaml  insurance-host-ragas-evaluation.yaml  kustomization.yaml  metrics.yaml
deploy/base/insurance-host-agent/: agent.yaml  deployment.yaml  service.yaml
deploy/base/insurance-products/: deployment.yaml  service.yaml
deploy/base/stats-analysis-agent/: agent.yaml  deployment.yaml  service.yaml
deploy/dev/: kustomization.yaml  secret.yaml
deploy/librechat/: config.yaml
deploy/local/: agent-communication-dashboard-backend-config.yaml  agent-runtime-config.yaml  ai-gateway.yaml  grafana-dashboard-agents.json  grafana-dashboard-http-services.json  grafana-dashboard-http.json  grafana-dashboard-litellm.json  guardrail-presidio.yaml  kustomization.yaml  lgtm.yaml  llm-gateway.yaml  observability-dashboard.yaml  otel-collector.yaml  otel-config-testkube.yaml  otel-tempo-config.yaml  presidio.yaml  tool-gateway.yaml
deploy/local/data-server/: configmap.yaml  deployment.yaml  kustomization.yaml  (+1 more)
dev/grafana/: datasource.yaml
frontend/: Dockerfile  Makefile  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/supabase/: config.toml
mcp-server/: Dockerfile  README.md
mcp-server/customer_crm/: main.py
mcp-server/insurance_products/: main.py
mcp-servers/: Dockerfile  pyproject.toml
mcp-servers/customer_crm/: Dockerfile  README.md  main.py  pyproject.toml
mcp-servers/customer_crm/src/customer_crm/: __main__.py  mock_database.py
mcp-servers/insurance_products/: Dockerfile  README.md  main.py  pyproject.toml
mcp-servers/insurance_products/src/insurance_products/: __main__.py  mock_database.py  otel.py
mcp-servers/src/: customer_crm.py  customer_db.py  insurance_products.py  middleware.py  otel.py  products_db.py  response.py
test/: cross-selling-ragas-evaluation.yaml  insurance-host-ragas-evaluation.yaml  test_placeholder.py
test/e2e/: a2a-message.sh  load-test.k6.js  openai-api.sh
(+18 files in other folders)
