[project]
name = "cross-selling-use-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.31.1",
    "mypy>=1.9.0",
    "ruff>=0.11.2",
    "pytest>=8.1.1",
    "bandit[toml]>=1.7.8",
    "import-linter>=2.0"
]

[tool.uv.workspace]
members = [
    "agents/base",
    "agents/insurance_host_agent",
    "agents/communications_agent",
    "agents/cross_selling_agent",
    "agents/service_expert",
    "mcp-servers/customer_crm",
    "mcp-servers/insurance_products",
    "agents/stats_analysis_agent",
]

[tool.poe.tasks]
test = "pytest --strict-config"
test-watch = "ptw ."

format = "ruff format"
lint = "ruff check --fix"
ruff = ["format", "lint"]

bandit = "bandit -c pyproject.toml -r ."
mypy = "mypy ."
lint-imports = "lint-imports"

check = ["mypy", "bandit", "ruff", "lint-imports", "test"]

[tool.importlinter]
root_packages = [
    "base",
    "communications_agent",
    "cross_selling_agent",
    "customer_crm",
    "insurance_host_agent",
    "insurance_products"
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120


[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I001 --> enable import sorting rules
# Q --> enable flake8-quotes rules for consistent quote style
# N --> pep8-naming for proper naming conventions
# PT --> flake8-pytest-style for pytest best practices
# TID251 --> banned relative imports
# DTZ --> datetime timezone awareness
extend-select = ["Q", "N", "I001", "PT", "TID251", "DTZ"]

[tool.bandit]
exclude_dirs = [".cache", ".venv"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
