[project]
name = "agentic-playground"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[eval]>=1.2.1",
    "fastmcp>=2.10.1",
    "a2a-sdk>=0.2.10",
    "slack-sdk>=3.33.0",
]

[dependency-groups]
dev = [
    "deepeval>=3.0.5",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-dotenv>=0.5.2",
]
