[project]
name = "communications-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base",
    "slack-sdk>=3.33.0",
]

[tool.uv.sources]
base = { workspace = true }

[project.scripts]
communications_agent = "communications_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
