[project]
name = "cross-selling-agent"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base"
]

[tool.uv.sources]
base = { workspace = true }

[project.scripts]
cross_selling_agent = "cross_selling_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
