[project]
name = "insurance-host-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base"
]

[tool.uv.sources]
base = { workspace = true }

[project.scripts]
insurance_host_agent = "insurance_host_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
