[project]
name = "insurance-host-agent"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base"
]

[tool.uv.sources]
base = { workspace = true }

[project.scripts]
insurance-host-agent = "insurance_host_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
