[project]
name = "service-expert"
version = "0.1.0"
description = "Insurance Service Expert Agent - provides comprehensive product information via MCP server"
authors = []
dependencies = [
    "base",
]
requires-python = ">=3.13"

[project.scripts]
service_expert = "service_expert.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
base = { workspace = true }