[project]
name = "stats-analysis-agent"
version = "0.1.0"
description = "An agent that analyzes current customers and their policies to deliver relevant stats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base",
    # Add other specific dependencies here
]
[project.scripts]
stats-analysis-agent = "stats_analysis_agent.__main__:main"

[tool.uv.sources]
base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"