[project]
name = "customer-crm"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.1",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]

[project.scripts]
customer_crm = "customer_crm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
