[project]
name = "insurance-products"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0b2",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]

[project.scripts]
insurance_products = "insurance_products.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
